feat: Enrich search service